[package]
name = "sjvm"
version = "0.1.0"
authors = ["Sam Westerman <sam@sampersand.me>"]
edition = "2018"
description = "Sojourn's VM"

[dependencies]
sjef = { path = "../sjef", version = "*" }
tracing = "0.1"
static_assertions = "1.1"
read-from = "^0.5"

tracing-subscriber="0.2"
tracing-tree="0.1"
